@@ -1,3 +1,10 @@
+2004-12-06 Shane Landrum <epicene@pobox.com>
+
+	* en/Gtk/AccelCanActivateHandler.xml
+	* en/Gtk/Widget.xml
+	* en/Gtk/AccelCanActivateArgs.xml: Added docs for accelerator-related
+	signals and handlers.
+
 2004-12-05  John Luke  <john.luke@gmail.com>
 
 	* en/Gtk/Expander.xml: doc it
